# airbnb-c

./: d  main.py  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
config/: authentication.py  settings.py  urls.py  wsgi.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_perks_perk_explanation.py  0003_experience_category_alter_perk_detail_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pet_allowed.py
medias/: admin.py  models.py  serializers.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py  0003_alter_photo_experience_alter_photo_room.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  (+1 more)
rooms/templates/: all_rooms.html  (+1 more)
users/: admin.py  models.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+6 files in other folders)
